--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-google-auth
-google-auth-httplib2
-google-auth-oauthlib
-google-api-python-client
-streamlit
+streamlit>=1.32.0
+google-auth>=2.22.0
+google-auth-httplib2>=0.1.1
+google-auth-oauthlib>=1.1.0
+google-api-python-client>=2.92.0
